Update actions tutorial to SDK 2.1.1.